cmake_minimum_required(VERSION 3.10)
file(GLOB_RECURSE "R_SRC" "*.c" "*.h")
include_directories(./libr
        ./libr/anal/arch/gb
        ./libr/anal/arch/hexagon
        ./libr/asm/arch/8051
        ./libr/asm/arch/arc/gnu
        ./libr/asm/arch/arm
        ./libr/asm/arch/arm/aarch64
        ./libr/asm/arch/arm/gnu
        ./libr/asm/arch/arm/winedbg
        ./libr/asm/arch/avr
        ./libr/asm/arch/cr16
        ./libr/asm/arch/dalvik
        ./libr/asm/arch/dcpu16
        ./libr/asm/arch/ebc
        ./libr/asm/arch/gb
        ./libr/asm/arch/h8300
        ./libr/asm/arch/hexagon
        ./libr/asm/arch/hexagon/gnu/opcode
        ./libr/asm/arch/i8080
        ./libr/asm/arch/include
        ./libr/asm/arch/include/elf
        ./libr/asm/arch/include/opcode
        ./libr/asm/arch/lh5801
        ./libr/asm/arch/lm32
        ./libr/asm/arch/mcs96
        ./libr/asm/arch/msp430
        ./libr/asm/arch/pic
        ./libr/asm/arch/ppc/libps
        ./libr/asm/arch/ppc/libvle
        ./libr/asm/arch/propeller
        ./libr/asm/arch/riscv
        ./libr/asm/arch/rsp
        ./libr/asm/arch/sh/gnu
        ./libr/asm/arch/snes
        ./libr/asm/arch/spc700
        ./libr/asm/arch/tms320
        ./libr/asm/arch/tms320/c55x
        ./libr/asm/arch/tms320/c55x_plus
        ./libr/asm/arch/v810
        ./libr/asm/arch/v850
        ./libr/asm/arch/vax
        ./libr/asm/arch/wasm
        ./libr/asm/arch/xap
        ./libr/asm/arch/z80
        ./libr/asm/p
        ./libr/bin/format/bflt
        ./libr/bin/format/coff
        ./libr/bin/format/dex
        ./libr/bin/format/elf
        ./libr/bin/format/mach0
        ./libr/bin/format/mdmp
        ./libr/bin/format/mz
        ./libr/bin/format/nes
        ./libr/bin/format/nin
        ./libr/bin/format/nxo
        ./libr/bin/format/objc
        ./libr/bin/format/omf
        ./libr/bin/format/p9
        ./libr/bin/format/pe
        ./libr/bin/format/psxexe
        ./libr/bin/format/sfc
        ./libr/bin/format/spc700
        ./libr/bin/format/te
        ./libr/bin/format/vsf
        ./libr/bin/format/wasm
        ./libr/bin/format/xbe
        ./libr/bin/format/zimg
        ./libr/bin/mangling
        ./libr/bin/mangling/cxx
        ./libr/bin/pdb
        ./libr/crypto/p
        ./libr/debug/p
        ./libr/debug/p/native
        ./libr/debug/p/native/linux
        ./libr/debug/p/native/linux/reg
        ./libr/debug/p/native/reg
        ./libr/debug/p/native/windows
        ./libr/debug/p/native/xnu
        ./libr/debug/p/native/xnu/reg
        ./libr/egg/rlcc/mpc
        ./libr/fs
        ./libr/hash
        ./libr/include
        ./libr/include/msvc
        ./libr/include/msvc/sys
        ./libr/include/r_util
        ./libr/include/sdb
        ./libr/include/sflib/common
        ./libr/include/sflib/darwin-arm-64
        ./libr/include/sflib/darwin-x86-32
        ./libr/include/sflib/darwin-x86-64
        ./libr/include/sflib/linux-arm-32
        ./libr/include/sflib/linux-arm-64
        ./libr/include/sflib/linux-x86-32
        ./libr/include/sflib/linux-x86-64
        ./libr/io
        ./libr/io/p
        ./libr/magic
        ./libr/parse/p/parse_mreplace
        ./libr/syscall
        ./libr/util
        ./libr/util/regex
        ./shlr/ar
        ./shlr/bochs/include
        ./shlr/capstone
        ./shlr/capstone/arch/AArch64
        ./shlr/capstone/arch/ARM
        ./shlr/capstone/arch/EVM
        ./shlr/capstone/arch/M680X
        ./shlr/capstone/arch/M68K
        ./shlr/capstone/arch/Mips
        ./shlr/capstone/arch/PowerPC
        ./shlr/capstone/arch/Sparc
        ./shlr/capstone/arch/SystemZ
        ./shlr/capstone/arch/TMS320C64x
        ./shlr/capstone/arch/X86
        ./shlr/capstone/arch/XCore
        ./shlr/capstone/contrib/windows_kernel
        ./shlr/capstone/cstool
        ./shlr/capstone/include/capstone
        ./shlr/capstone/include/windowsce
        ./shlr/capstone/windows
        ./shlr/gdb/include
        ./shlr/gdb/include/gdbclient
        ./shlr/gdb/include/gdbserver
        ./shlr/grub/include
        ./shlr/grub/include/grub
        ./shlr/grub/include/grub/cpu
        ./shlr/grub/include/grub/emu
        ./shlr/grub/include/grub/util
        ./shlr/heap/include/r_jemalloc
        ./shlr/heap/include/r_jemalloc/internal
        ./shlr/heap/include/r_jemalloc/internal/msvc_compat
        ./shlr/java
        ./shlr/lz4
        ./shlr/qnx/include
        ./shlr/sdb/msvc
        ./shlr/sdb/src
        ./shlr/sdb/src/json
        ./shlr/spp
        ./shlr/spp/p
        ./shlr/tcc
        ./shlr/windbg
        ./shlr/zip/include
        ./shlr/zip/zip
        ./shlr/zip/zlib
        )

add_executable(r2 "${R_SRC}")
message(STATUS "${R_SRC}")